Changes for 2.0.14rc1

New features:
A.F....... [ZBX-1357] updated Spanish translation; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-8700] fixed possible SQL error in details of web scenario (Oleg)

--------------------------------------------------------------------------------
Changes for 2.0.13

2.0.13rc1 was released as 2.0.13 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.13rc1

New features:
A.F....... [ZBX-1357] updated Slovak and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-3407] fixed NVPS query to not fail on DB2 (Krists)
...G...... [ZBX-8646] added a warning on UNIX/GNU/Linux platforms if logrt[] directory has no 'execute' permission (Andris)
...G...PS. [ZBX-8629] fixed crash in get_string() function when checking "Database monitor" items (asaveljevs)
....IJ.... [ZBX-4800] replaced JSON.org library with Android JSON library; thanks to Volker Fröhlich for legal research (asaveljevs)
.....J.... [ZBX-6229] removed pretty formatting from Java gateway JSON responses (asaveljevs)
.........T [ZBX-4800] fixed typo in item name in "Template JMX Generic": "mpTenured" -> "mp Tenured" (asaveljevs)
..F....PS. [ZBX-8608] added support of IP masks for action conditions (Sasha)
A.F....... [ZBX-8151] fixed XXE vulnerability on XML import using obsolete libxml versions; thanks to pnig0s@Freebuf for the report (Andrejs)
..F....... [ZBX-8358] fixed overview screen elements being displayed incorrectly after refreshing (Pavels)
........S. [ZBX-8348] fixed processing of LLD triggers; functions in a trigger expression could have incorrect ordering (Sasha)
...G...PS. [ZBX-8343] fixed a bug in binary heap that could cause a slightly inconsistent ordering of elements in the queue (asaveljevs)
...G...... [ZBX-8327] fixed possible crash when processing Windows eventlog (wiper)