@@ -1,2 +1,0 @@
-All PNG files in this directory are copyrighted by Jakub "Jimmac" Steiner, http://jimmac.musichall.cz/ikony.php3 and
-released under terms and conditions of GPL.
