@@ -1,1 +1,5 @@
 These are older images, used in Zabbix versions 1.1 - 1.8.
+
+All PNG files in this directory are copyrighted by Jakub "Jimmac" Steiner,
+ http://jimmac.musichall.cz/ikony.php3 and released under terms and conditions
+ of GPL.
